--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul> 
             <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao">Acessibilidade</button>
+                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
                 <button id="aumentar-fonte" class="btn btn-primary fw-bold">T +</button>
-                <button id="diminuir-fonte"  class="btn btn-primary fw-bold">T -</button> 
-                </div>    
+                <button id="diminuir-fonte"  class="btn btn-primary fw-bold">T -</button>
+            </div>
+            </div>    
         </nav>
        
     </header>
